# katsu

./: .clang-format  .gitignore  CMakeLists.txt  README  builtin.py  compiler.py  error.py  format  interpreter.py  lexer.py  notes  parser.py  run  run.py  source.k  source.src  span.py  update-test
docs/: core.cleanup.html  core.dynamic-variable.html  core.fiber.html  core.html  core.io.linux.file.html  core.optional.html  core.sentinel.html  core.sequence.html  core.sequence.vector.html  index.html  style.css
docs-out/: core.array.html  core.assoc.html  core.builtin.ffi.html  core.builtin.misc.html  core.byte-array.html  core.condition-handler.html  core.condition.html  core.io.html  core.io.linux.errno.html  core.io.linux.platform.html  core.io.linux.scheduler.html  core.mixin.html  core.mixin.private.html  core.sequence.array.html  core.sequence.byte-array.html  core.sequence.resizable.html  core.stack-trace.html  core.tuple.html  core.vector.html
docs-src/: style.css
docs/module/: core.array.html  core.assoc.html  core.bootstrap.load.html  core.builtin.default.html  core.builtin.ffi.html  core.builtin.misc.html  core.byte-array.html  core.cleanup.html  core.code.html  core.combinator.html  core.condition-handler.html  core.condition.html  core.dynamic-variable.html  core.ffi.html  core.fiber.html  core.html  core.io.html  core.io.linux.epoll.html  core.io.linux.errno.html  core.io.linux.error.html  core.io.linux.file.html  core.io.linux.handle.html  core.io.linux.platform.html  core.io.linux.scheduler.html  core.io.linux.socket.html  core.io.stream.html  core.mixin.html  core.mixin.private.html  core.optional.html  core.resource.html  core.sentinel.html  core.sequence.array.html  core.sequence.assoc.html  core.sequence.byte-array.html  core.sequence.html  core.sequence.resizable.html  core.sequence.string.html  core.sequence.vector.html  core.stack-trace.html  core.string.html  (+2 more)
example/: basics.katsu  bytecodes.katsu  core.katsu  module.katsu  simple.katsu  syntax.katsu
src/: assertions.h  ast.cc  ast.h  builtin.cc  builtin.h  compile.cc  compile.h  gc.cc  gc.h  gc_test.cc  katsu.cc  katsu.h  katsu_test.cc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  span.cc  span.h  token.cc  token.h  value.h  value_test.cc  value_utils.cc  value_utils.h  value_utils_test.cc  vm.cc  vm.h  vm_test.cc
src/core/: array.katsu  assoc.katsu  byte-array.katsu  cleanup.katsu  code.katsu  combinator.katsu  condition-handler.katsu  condition.katsu  core.katsu  dynamic-variable.katsu  ffi.katsu  fiber.katsu  io.katsu  misc.katsu  mixin.katsu  optional.katsu  resource.katsu  sentinel.katsu  sequence.katsu  stack-trace.katsu  string.katsu  tuple.katsu  vector.katsu
src/core/io/: stream.katsu
src/core/io/linux/: epoll.katsu  errno.katsu  error.katsu  file.katsu  handle.katsu  platform.katsu  scheduler.katsu  socket.katsu
src/core/mixin/: private.katsu
src/core/sequence/: array.katsu  assoc.katsu  byte-array.katsu  resizable.katsu  string.katsu  vector.katsu
src/example/: basics.katsu  bytecodes.katsu  generate-docs.katsu  imports-test.katsu  io.katsu  module.katsu  simple.katsu  test.katsu
src/example/imports/: indirect.katsu  multimethods.katsu
test/: dynamic-variable.katsu  dynamic-variable.stdout  echo.katsu  echo.stdin  error.katsu  error.stderr  error.stdout  ffi.katsu  ffi.stdout  fiber.katsu  fiber.stdout  io.katsu  io.stderr  io.stdout  mixin.katsu  module-cleanup-error.katsu  module-cleanup-error.stderr  module-cleanup-error.stdout  module-cleanup.katsu  module-cleanup.stdout  multimethods.katsu  multimethods.stdout  sequence.katsu  sequence.stdout  smoketest.katsu  smoketest.stdout  string.katsu  string.stdout
test/files/: file1.txt  file2.txt
vm/: ast.cc  ast.h  builtin.cc  builtin.h  builtin_ffi.cc  builtin_ffi.h  compile.cc  compile.h  condition.h  gc.cc  gc_test.cc  katsu.cc  katsu.h  katsu_test.cc  lexer.cc  lexer.h  lexer_test.cc  main.cc  parser.h  span.h  token.h  value.h  value_test.cc  value_utils.cc  value_utils.h  value_utils_test.cc  vm.cc  vm.h  vm_test.cc
